--- a/tribute_page/styles.css
+++ b/tribute_page/styles.css
@@ -31,15 +31,26 @@ html {
   
   @media (max-width: 460px) {
     h1 {
-      font-size: 3rem;
+      font-size: 3.5rem;
       line-height: 1.2;
+    }
+  }
+  @media (max-width: 390px) {
+    h1 {
+      font-size: 3rem;
+      line-height: 1.1;
     }
   }
   
   h2 {
     font-size: 3.25rem;
   }
-  
+  @media (max-width: 390px) {
+    h2 {
+      font-size: 2.5rem;
+    }
+  }
+
   .link1, .link2, .link3, .link4 {
     color: #366891;
   } 
@@ -81,6 +92,11 @@ html {
   @media (max-width: 460px) {
     #img-caption {
       font-size: 1.4rem;
+    }
+  }
+  @media (max-width: 390px) {
+    #img-caption {
+      font-size: 1.2rem;
     }
   }
   
